--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,11 @@
 {
   "name": "mia-dao",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "bn.js": "^5.1.3",
     "ethers": "^5.0.24",
     "react": "^17.0.1",
