Created MIA_Ownable, TokenProxy AllowanceSheet, BalanceSheet, TokenStorage contracts with test

--- a/packages/token/package.json
+++ b/packages/token/package.json
@@ -6,6 +6,7 @@
     "@openzeppelin/contracts": "^3.3.0",
     "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.25",
     "bn.js": "^5.1.3",
     "chai": "^4.2.0",
@@ -21,11 +22,16 @@
   },
   "scripts": {
     "compile": "npx hardhat compile",
-    "deploy": "yarn deploy:v1:rinkeby",
-    "deploy:v2": "yarn deploy:v2:rinkeby",
+    "deploy": "yarn deploy:proxy:rinkeby",
+    "deploy:proxy:rinkeby": "npx hardhat run scripts/deploy/proxy/index.ts --network rinkeby",
     "deploy:v1:rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
     "deploy:v1:rinkeby:ts": "npx hardhat run scripts/deploy.ts --network rinkeby",
+    "deploy:v2": "yarn deploy:v2:rinkeby",
     "deploy:v2:rinkeby": "npx hardhat run scripts/deploy/deploy-v2.js --network rinkeby",
-    "test": "npx hardhat test"
+    "mint:token:v0:rinkeby": "npx hardhat run scripts/mint/index.ts --network rinkeby",
+    "test": "npx hardhat test",
+    "test:tokens": "npx hardhat test test/deploy-tokens.test.ts",
+    "test:storage": "npx hardhat test test/deploy-tokens-storage.test.ts",
+    "test:proxy": "npx hardhat test test/deploy-tokens-proxy.test.ts"
   }
 }
