--- a/packages/token/tsconfig.json
+++ b/packages/token/tsconfig.json
@@ -7,11 +7,12 @@
         "outDir": "dist",
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
-        "baseUrl": "./"
+        "baseUrl": "."
     },
     "include": [
         "./scripts",
-        "./test"
+        "./test",
+        "./artifacts"
     ],
     "files": [
         "./hardhat.config.ts"
