--- a/packages/token/package.json
+++ b/packages/token/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.0.24",
     "hardhat": "^2.0.6",
     "hardhat-typechain": "^0.3.4",
+    "open": "^7.4.1",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "typechain": "^4.0.1",
@@ -23,6 +24,7 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "deploy": "yarn deploy:proxy:rinkeby",
+    "mint": "yarn mint:token:v0:rinkeby",
     "deploy:proxy:rinkeby": "npx hardhat run scripts/deploy/proxy/index.ts --network rinkeby",
     "deploy:v1:rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
     "deploy:v1:rinkeby:ts": "npx hardhat run scripts/deploy.ts --network rinkeby",
