Added different implementation of an upgradable token

--- a/packages/token/package.json
+++ b/packages/token/package.json
@@ -34,6 +34,7 @@
     "test": "npx hardhat test",
     "test:tokens": "npx hardhat test test/deploy-tokens.test.ts",
     "test:storage": "npx hardhat test test/deploy-tokens-storage.test.ts",
-    "test:proxy": "npx hardhat test test/deploy-tokens-proxy.test.ts"
+    "test:proxy": "npx hardhat test test/deploy-tokens-proxy.test.ts",
+    "test:upgradable-token": "npx hardhat test test/deploy-upgradable-token-proxy.test.ts"
   }
 }
