--- a/packages/token/package.json
+++ b/packages/token/package.json
@@ -27,20 +27,8 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "deploy": "yarn deploy:proxy:rinkeby",
-    "mint": "yarn mint:token:v0:rinkeby",
-    "deploy:proxy:rinkeby": "npx hardhat run scripts/deploy/proxy/index.ts --network rinkeby",
-    "deploy:v1:rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
-    "deploy:v1:rinkeby:ts": "npx hardhat run scripts/deploy.ts --network rinkeby",
-    "deploy:v2": "yarn deploy:v2:rinkeby",
-    "deploy:v2:rinkeby": "npx hardhat run scripts/deploy/deploy-v2.js --network rinkeby",
-    "mint:token:v0:rinkeby": "npx hardhat run scripts/mint/index.ts --network rinkeby",
-    "test": "yarn test:proxy2",
-    "test2": "npx hardhat test",
-    "test:tokens": "npx hardhat test test/deploy-tokens.test.ts",
-    "test:storage": "npx hardhat test test/deploy-tokens-storage.test.ts",
-    "test:proxy": "npx hardhat test test/deploy-tokens-proxy.test.ts",
-    "test:upgradable-token": "npx hardhat test test/deploy-upgradable-token.test.ts",
-    "test:proxy2": "npx hardhat test test/proxy/deploy-proxy.test.ts",
-    "scripts": "npx hardhat run scripts/deploy/proxy/deploy.ts --network rinkeby"
+    "deploy:proxy:rinkeby": "npx hardhat run scripts/deploy/proxy/deploy.ts --network rinkeby",
+    "test": "yarn test:proxy",
+    "test:proxy": "npx hardhat test test/proxy/deploy-proxy.test.ts"
   }
 }
