--- a/packages/token/tsconfig.json
+++ b/packages/token/tsconfig.json
@@ -7,7 +7,7 @@
         "outDir": "dist",
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
-        "baseUrl": "."
+        "baseUrl": "./"
     },
     "include": [
         "./scripts",
