Added final tests

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ui": "cd packages && cd ui && yarn start",
     "contracts:compile": "cd packages && cd token && yarn compile",
     "contracts:deploy": "cd packages && cd token && yarn deploy",
+    "test": "yarn contracts:test",
     "contracts:test": "cd packages && cd token && yarn test"
   }
 }
